--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11"
   }
 }
