--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,17 @@
     "antd": "^6.1.3",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.4",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19"
